# chemiscope

./: .eslintrc.yml  .gitignore  .prettierignore  .prettierrc.yml  .travis.yml  3dmol-example.html  AGENTS.md  CITATION.cff  CNAME  Contributing.md  LICENSE  MANIFEST.in  README.md  app.css  app.ts  chemiscope-app.min.js  chemiscope-directive.md  chemiscope.min.js  chemjson.py  eslint.config.mjs  generate-standalone.py  index.html  karma.conf.js  karma.conf.ts  molecule-viewer.min.js  package-lock.json  package.json  pyproject.toml  setup.cfg  setup.py  tmp.ipynb  tox.ini  tsconfig.json  tslint.json  tslint.yml  visualizers-example.html  webpack.base.ts  webpack.config.js  webpack.config.mjs  webpack.config.ts  (+2 more)
.claude/skills/: chemiscope-python
.github/workflows/: build.yml  colab.yml  tests.yml  website.yml  wheel.yml
app/: 3dmol-example.html  app.css  app.ts  index.html  jsmol-example.html  streaming.ts  streaming.worker.ts  visualizers-example.html
app/streaming/: index.ts  parser.ts  store.ts
docs/: .buildinfo  .gitignore  Makefile  embedding.html  examples.html  genindex.html  index.html  make.bat  objects.inv  requirements.txt  search.html  searchindex.js  sg_execution_times.html
docs/_datasets/: ef41166ff81f11bf12b87aa091929ce038385aff540c02603fb2012f58e9a556-showcase-external.json
docs/_sources/: embedding.rst.txt  index.rst.txt  sg_execution_times.rst.txt
docs/_static/: chemiscope-sphinx.css  chemiscope-sphinx.html  chemiscope-sphinx.js  chemiscope.min.js  documentation_options.js  sphinx_argparse_cli.css
docs/_templates/: layout.html  navbar.html  sidebar-toc.html
docs/api/: index.html
docs/examples/: 1-base.html  10-visualizing-biomolecules.html  11-headless.html  12-parameterized-properties.html  2-structure_map.html  3-trajectory.html  4-colors.html  5-shapes.html  6-explore.html  7-explore-advanced.html  base.html  (+11 more)
examples/: .gitignore  JSmol-14.29.53.min.js  Qm7b.json  index.html  standalone.in.html
paper/: paper.bib  paper.md
python/: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  webpack.config.anywidget.mjs  webpack.config.labextension.js  webpack.config.nbextension.js  webpack.config.nbextension.ts  webpack.config.streamlit.mjs  webpack.config.ts
python/chemiscope/: __init__.py  adapters.py  explore.py  headless.py  input.py  jupyter.py  main.py  sphinx_gallery.py  streamlit.py  structures.py  version.py  widget.py
python/chemiscope/explore/: __init__.py  _mad_explorer.py  _metatensor.py  _metatomic.py  _sketchmap.py  _soap_pca.py
python/chemiscope/nbextension/: chemiscope-widget.json
python/chemiscope/sphinx/: __init__.py  _directive.py  _scraper.py  directive.py  file_path_iterator.py  nodes.py  scraper.py  utils.py
python/chemiscope/sphinx/static/: .gitignore  chemiscope-sphinx.css  chemiscope-sphinx.html  chemiscope-sphinx.js
python/chemiscope/sphinx/static/css/: chemischope-sphinx-gallery.css  chemiscope-sphinx-gallery.css  chemiscope-sphinx.css
python/chemiscope/sphinx/static/html/: chemischope-sphinx-gallery.html  chemiscope-sphinx-gallery.html  chemiscope-sphinx.html
python/chemiscope/sphinx/static/js/: chemischope-sphinx-gallery.js  chemiscope-sphinx-gallery.js  chemiscope-sphinx.js
python/chemiscope/static/: .gitignore
python/chemiscope/static/css/: chemischope-sphinx-gallery.css
python/chemiscope/static/html/: chemischope-sphinx-gallery.html
python/chemiscope/static/js/: chemischope-sphinx-gallery.js
python/chemiscope/streamlit/: .gitignore  __init__.py
python/chemiscope/structures/: __init__.py  _ase.py  _bonding.py  _chemfiles.py  _mda.py  _shapes.py  _stk.py
python/examples/: .gitignore  1-base.py  10-including_custom_bonds.py  10-visualizing-biomolecules.py  11-headless.py  12-parameterized-properties.py  2-structure_map.py  3-trajectory.py  4-colors.py  5-shapes.py  6-explore.py  7-explore-advanced.py  8-explore-with-metatensor.py  8-explore-with-metatomic.py  8-showing_custom_bonds.py  9-showing-custom-bonds.py  9-showing_custom_bonds.py  README.rst  alphaml.xyz  base.py  chemiscope-colab.ipynb  colors.py  explore.py  model.pt  molecular_map.py  shapes.py  structure_map.py  trajectory.py
python/examples/data/: README.md  alpha-mu.xyz  epcr_gla_2vpx2500ts_10degr.xtc  explore_c-gap-20u.xyz  explore_m3cd.xyz  explore_qm9.xyz  irreverence.npz  showcase.xyz  stk_0.mol  stk_1.mol  stk_2.mol  stk_3.mol  stk_4.mol  stk_cage.xyz  stkbuilt.xyz  trajectory-mace_off_features.npy  trajectory.xyz  unoptcage.mol
python/jupyter/: .gitignore  chemiscope.json  extension.js
python/jupyter/src/: anywidget.ts  labextension.ts  nbextension.ts  widget.css  widget.ts
python/nbextension/: extension.js
python/nbextension/src/: chemiscope-bootstrap.less  index.ts  widget.css  widget.ts
python/streamlit/: package-lock.json  package.json  shims-streamlit-component-lib.d.ts  tsconfig.json  webpack.config.js
python/streamlit/example/: app.py  explore_app.py  ui.py
python/streamlit/src/: ChemiscopeComponent.ts  chemiscope-streamlit.css  dom-utils.ts  index.html  index.ts  types.ts
python/streamlit/types/: chemiscope.ts  streamlit-component-lib.d.ts
python/tests/: README.md  ase_adapter.py  ase_structures.py  chemfiles_structures.py  create_input.py  headless.py  mda_structures.py  shapes.py  stk_structures.py  write_input.py
python/widget/src/: anywidget.ts  widget.css  widget.ts
src/: collapse.ts  colorscales.ts  dataset.ts  display-toggle.ts  draggable.ts  index.ts  indexer.ts  info.ts  jsmol.ts  map_data.ts  metadata.ts  modal.ts  mode-toggle.ts  options.ts  plot.ts  plot_data.ts  plot_properties.ts  properties.ts  settings.ts  shapes.ts  sketchmap.ts  sketchviz.ts  slider.ts  styles.ts  table.ts  target-toggle.ts  toggle.ts  typing.d.ts  viewer.ts
tests/: helper.test.ts  indexer.test.ts  jsdom.ts  karma.conf.ts  utils.test.ts  webpack.config.ts
utils/: chemiscope_input.py  clean-python.sh  download-example-input.js  download-example-input.ts  download-examples.ts  generate_standalone.py  sphinx-gallery-setup.sh  webpack-assert-message.js  webpack-assert-message.ts
(+911 files in other folders)
