[project]
name = "chemiscope"
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "ipywidgets>=7,<9",
]

readme = "python/README.md"
license = {text = "BSD-3-Clause"}
description = "Helpers to work with the chemiscope interactive structure/property explorer for materials and molecules"

authors = [
    {name = "Guillaume Fraux", email = "guillaume.fraux@epfl.ch"},
]

keywords = ["visualization", "materials science", "chemistry", "molecules"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]

[project.urls]
homepage = "https://chemiscope.org"
documentation = "https://chemiscope.org/docs/"
repository = "https://github.com/lab-cosmo/chemiscope"

### ======================================================================== ###

[build-system]
requires = [
    "setuptools",
    "wheel",
    "jupyterlab >=4.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "chemiscope.version.__version__"}

[tool.setuptools.packages.find]
where = ["python"]
include = ["chemiscope*"]
namespaces = false

### ======================================================================== ###

[tool.tox]
legacy_tox_ini = """
[tox]

[testenv]
usedevelop = true
deps =
    ase

commands =
    python -m unittest discover -p "*.py" -s python/tests
"""
