[metadata]
name = chemiscope
version = attr: chemiscope.__version__
description = Helpers to generate JSON input files for the default chemiscope visualizer at https://chemiscope.org
keywords = visualization materials science chemistry
long_description = file: README.md
long_description_content_type = text/markdown

license = BSD-3-Clause
license_files = ../LICENSE
author = Guillaume Fraux
author_email = guillaume.fraux@epfl.ch
url = https://github.com/cosmo-epfl/chemiscope/
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Visualization

[options]
zip_safe = True
packages = find:
install_requires = numpy

[options.entry_points]
console_scripts =
    chemiscope-input = chemiscope.main:main

[bdist_wheel]
universal = 1
